--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "bulma": "^0.9.4",
+    "markdown-to-jsx": "^7.1.7",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
