--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build-only": "next build",
+    "build": "next build && next export && touch out/.nojekyll",
+    "deploy": "gh-pages -d out",
     "start": "next start",
     "lint": "next lint",
     "export": "next export"
@@ -16,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "bulma": "^0.9.4",
+    "gh-pages": "^4.0.0",
     "markdown-to-jsx": "^7.1.7",
     "next": "12.1.6",
     "react": "18.2.0",
